[MOSIP-13901] added workflowSearchapi ports in reprocessor deployment

--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -138,6 +138,8 @@ services:
       eventUpdateServerPort: 8024
       workflowActionEventBusPort: 5752
       workflowActionServerPort: 8023
+      workflowSearchEventBusPort: 5753
+      workflowSearchServerPort: 8025
       servicePort: 80
     ingressPath: /registrationprocessor/v1/reprocessor/ 
     healthUrl: /registrationprocessor/v1/reprocessor/actuator/health
