[MOSIP-13843] adding hotlist service path to proxy pass

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -313,6 +313,10 @@ http {
            proxy_pass {{clusters.dmz.ingress.base_url}}/websub/;
         }
 
+        location /v1/hotlist/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/v1/hotlist/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
