--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
@@ -11,3 +11,4 @@ exportLogs: enabled  # Let filebeat export the logs
 imagePullPolicy: Always
 
 biosdklib: io.mosip.mock.sdk.impl.SampleSDK
+biosdklibzip: http://artifactory-service/artifactory/libs-release-local/biosdk/biosdk-lib.zip
