[MOSIP-14158] added latest websub changes

--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -24,3 +24,7 @@ hub:
   retry_maxwaitinterval: 65000
   port: 9191
   republish_time: 2021-03-24T08:07:11.645Z
+  hub_auth_base_url: "{{site.sandbox_public_url}}/v1/authmanager"
+  hub_auth_validate_token_url: "/authorize/admin/validateToken"
+  hub_auth_filter_disable: "'true'"
+
