--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -7,6 +7,9 @@ artifactoryUrl: {{ artifactory_url }}
 iamAdapterUrl: {{ iam_adapter_url }}
 exportLogs: enabled  # Let filebeat export the logs
 cache_provider: {{ cache_provider_url }}
+cacheConfigUrl: {{site.sandbox_public_url}}/config/*/mz/{{ config_repo.version }}/hazelcast_cache.xml
+clusterRole: packetmanager-cluster-role
+serviceAccount: packetmanager
 
 probe:
   initialDelay: 30  # Seconds
