--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -38,6 +38,7 @@ services:
     healthUrl: /registrationprocessor/v1/camelbridge/actuator/health
     podconfig:
       {{ podconfig.regproc.camel | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/camelbridge/actuator/prometheus
 
   notification:  # This is has a service front end for access (notification-svc.yaml)
     serviceName: {{ versions.services.regproc.notification.keys()[0] }} 
@@ -51,6 +52,7 @@ services:
     healthUrl: /registrationprocessor/v1/securezone/actuator/health
     podconfig:
       {{ podconfig.regproc.notification | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/securezone/actuator/prometheus
 
   reprocess:
     serviceName: {{ versions.services.regproc.reprocess.keys()[0] }} 
@@ -64,6 +66,7 @@ services:
     healthUrl: /registrationprocessor/v1/reprocessor/actuator/health
     podconfig:
       {{ podconfig.regproc.reprocess | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/reprocessor/actuator/prometheus
 
   uploader:
     serviceName: {{ versions.services.regproc.uploader.keys()[0] }} 
@@ -77,6 +80,7 @@ services:
     healthUrl: /registrationprocessor/v1/uploader/actuator/health
     podconfig:
       {{ podconfig.regproc.uploader | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/uploader/actuator/prometheus
 
   quality:
     serviceName: {{ versions.services.regproc.quality.keys()[0] }} 
@@ -90,6 +94,7 @@ services:
     healthUrl: /registrationprocessor/v1/qualitychecker/actuator/health
     podconfig:
       {{ podconfig.regproc.quality | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/qualitychecker/actuator/prometheus
 
   validator:
     serviceName: {{ versions.services.regproc.validator.keys()[0] }} 
@@ -103,6 +108,7 @@ services:
     healthUrl: /registrationprocessor/v1/packetvalidator/actuator/health
     podconfig:
       {{ podconfig.regproc.validator | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/packetvalidator/actuator/prometheus
 
   osi:
     serviceName: {{ versions.services.regproc.osi.keys()[0] }} 
@@ -116,6 +122,7 @@ services:
     healthUrl: /registrationprocessor/v1/osivalidator/actuator/health
     podconfig:
       {{ podconfig.regproc.osi | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/osivalidator/actuator/prometheus
 
   demo:
     serviceName: {{ versions.services.regproc.demo.keys()[0] }} 
@@ -129,6 +136,7 @@ services:
     healthUrl: /registrationprocessor/v1/demodedupe/actuator/health
     podconfig:
       {{ podconfig.regproc.demo | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/demodedupe/actuator/prometheus
 
   bio:
     serviceName: {{ versions.services.regproc.bio.keys()[0] }} 
@@ -142,6 +150,7 @@ services:
     healthUrl: /registrationprocessor/v1/biodedupe/actuator/health
     podconfig:
       {{ podconfig.regproc.bio | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/biodedupe/actuator/prometheus
 
   bioauth:
     serviceName: {{ versions.services.regproc.bioauth.keys()[0] }} 
@@ -155,6 +164,7 @@ services:
     healthUrl: /registrationprocessor/v1/bioauth/actuator/health
     podconfig:
       {{ podconfig.regproc.bioauth | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/bioauth/actuator/prometheus
 
   abishandler:
     serviceName: {{ versions.services.regproc.abishandler.keys()[0] }} 
@@ -168,6 +178,7 @@ services:
     healthUrl: /registrationprocessor/v1/abishandler/actuator/health
     podconfig:
       {{ podconfig.regproc.abishandler | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/abishandler/actuator/prometheus
 
   abismid:
     serviceName: {{ versions.services.regproc.abismid.keys()[0] }} 
@@ -181,6 +192,7 @@ services:
     healthUrl: /registrationprocessor/v1/abismiddleware/actuator/health
     podconfig:
       {{ podconfig.regproc.abismid | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/abismiddleware/actuator/prometheus
 
   manual:
     serviceName: {{ versions.services.regproc.manual.keys()[0] }} 
@@ -194,6 +206,7 @@ services:
     healthUrl: /registrationprocessor/v1/manualverification/actuator/health
     podconfig:
       {{ podconfig.regproc.manual | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/manualverification/actuator/prometheus
 
   external:
     serviceName: {{ versions.services.regproc.external.keys()[0] }} 
@@ -207,6 +220,7 @@ services:
     healthUrl: /registrationprocessor/v1/external/actuator/health 
     podconfig:
       {{ podconfig.regproc.external | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/external/actuator/prometheus
 
   eis: 
     serviceName: {{ versions.services.regproc.eis.keys()[0] }} 
@@ -218,6 +232,7 @@ services:
     healthUrl: /registrationprocessor/v1/eis/actuator/health
     podconfig:
       {{ podconfig.regproc.eis | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/eis/actuator/prometheus
 
   uin:
     serviceName: {{ versions.services.regproc.uin.keys()[0] }} 
@@ -231,6 +246,7 @@ services:
     healthUrl: /registrationprocessor/v1/uin-generator/actuator/health
     podconfig:
       {{ podconfig.regproc.uin | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/uin-generator/actuator/prometheus
 
   msg:
     serviceName: {{ versions.services.regproc.msg.keys()[0] }} 
@@ -244,6 +260,7 @@ services:
     healthUrl: /registrationprocessor/v1/sender-stage/actuator/health
     podconfig:
       {{ podconfig.regproc.msg | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/sender-stage/actuator/prometheus
 
   print:
     serviceName: {{ versions.services.regproc.print.keys()[0] }} 
@@ -257,6 +274,7 @@ services:
     healthUrl: /registrationprocessor/v1/print-stage/actuator/health
     podconfig:
       {{ podconfig.regproc.print | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/print-stage/actuator/prometheus
 
   trans:
     serviceName: {{ versions.services.regproc.trans.keys()[0] }} 
@@ -268,3 +286,4 @@ services:
     healthUrl: /registrationprocessor/v1/registrationtransaction/actuator/health
     podconfig:
       {{ podconfig.regproc.trans | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /registrationprocessor/v1/registrationtransaction/actuator/prometheus
