[MOSIP-14222] changes for running biosdk service inside k8 cluster

--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
@@ -2,6 +2,7 @@ name: biosdk # Will be used as service name too
 services:
   serviceName: {{ versions.services.mock.biosdk.keys()[0] }}
   dockerImage: {{ versions.services.mock.biosdk.values()[0] }}
+  ingress: /biosdk-service
   servicePort: 80
   containerPort: 9099
 component: biosdk
