[SSD-70] Completed addition of WIP mock-biosdk service

--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/values.template.j2
@@ -12,3 +12,5 @@ exportLogs: enabled  # Let filebeat export the logs
 imagePullPolicy: Always
 
 biosdklib: io.mosip.mock.sdk.impl.SampleSDK
+biosdklibzip: http://artifactory-service/artifactory/libs-release-local/biosdk/biosdk-lib.zip
+
